--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,31 +70,121 @@ footer .info {
     color: white;
     margin-top: 90px;
 }
-/*                                                 home first section                                                    */
-/* .firts-section {
-    display: inline-block;
-    width: 100%;
-    height: 1025px;
-    background-image: url(/img/background1.jpg) ;
-    filter: blur(5px);
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
-.background {
+/*                                                              home                                                     */
+.firts-section {
+    height: 770px;
+    padding-top: 115px;
+}
+.first-section-background {
     position: absolute;
-    filter: blur(5px);
+    filter: blur(2.5px);
     width: 100%;
     height: 100%;
     z-index: -1;
 }
-.firts-section {
-    height: 1025px;
-    padding-top: 115px;
-}
-.wave {
+.home .wave {
     text-align: center;
-    
+    margin-top: 60px;
+}
+.home .wave h1 {
+    color: white;
+    font-size: 77px;
+    font-weight: 600;
+    line-height: 94px;
+}
+.home .wave h1 span {
+    letter-spacing: 50px;
+}
+.home .wave button,
+.home .wave button a {
+    margin-top: 45px;
+    width: 360px;
+    height: 88px;
+    color: white;
+    background-color: #ED1C24;
+    border: none;
+    border-radius: 0px 20px 0px 20px;
+    font-size: 35px;
+    font-weight: 600;
+}
+.section-two {
+    margin-top: 60px;
+}
+.section-two .headers {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-align: center;
+}
+.section-two .headers h3 {
+    font-size: 25.67px;
+    color: rgba(104, 104, 104, 0.6);
+}
+.section-two .headers h2 {
+    font-size: 38.5px;
+    font-weight: 700;
+}
+.plat-gtid {
+    margin: 130px 100px;
+    display: grid;
+    grid-template-columns: repeat(3 ,356px);
+    grid-template-rows: repeat(3 ,277px);
 }
 
+/*                                                               contact                                                        */
 
-
+.contact-section {
+    margin: 60px 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 50px;
+}
+.contact-form {
+    display: grid;
+    grid-template-rows: repeat(5, 84px);
+    grid-template-columns: 319px 319px;
+    row-gap: 45px;
+    column-gap: 50px;
+}
+.email,
+#message,
+.contact-form button {
+    grid-column: span 2;
+}
+input::placeholder,
+textarea::placeholder {
+    color: white;
+    opacity: .75;
+    font-size: 19px;
+    font-weight: 400;
+    text-align: center;
+}
+.contact-form input,
+.contact-form button {
+    width: 100%;
+    height: 100%;
+    color: white;
+    background-color: #1D1C28;
+    border: none;
+    border-radius: 0 20px 0 20px;
+    font-size: 19px;
+    font-weight: 400;
+    text-align: center;
+}
+.contact-form button,
+.contact-form button a {
+    background-color: #ED1C24;
+    color: white;
+    width: 100%;
+    height: 100%;
+}
+.contact-form button {
+    margin-top: 15px;
+}
+.contact-header {
+    text-align: center;
+    margin-bottom: 77px;
+}
+#message {
+    grid-row: span 2;
+}
