--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -46,6 +46,7 @@ header ul a {
     background-color: #ED1C24;
     padding: 8px;
     border-radius: 50%;
+    cursor: pointer;
 }
 .shoping-cart div {
     position: absolute;
@@ -382,16 +383,74 @@ footer > p {
 .plat-9 {
     background-image: url(../img/salade2.jpg);
 }
+/* ------------cart box -------------------- */
+#cart-bx {
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    top: 100px;
+    background-color: #1D1C28;
+    right: 5vw;
+    min-height: 70vh;
+    max-height: 90vh;
+    width: 40vw;
+    z-index: 10000000;
+}
+.your-cart {
+    text-align: center;
+    color: white;
+    background-color: #ED1C24;
+    
+}
+.product {
+    margin-top: 10px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: flex-start;   
+    color: white;
+}
+
+.buy {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 10vh;
+    background-color: white;
+}
+#total {
+    margin-left: 10px;
+}
+.buy-now,
+.buy-now button {
+    width: 100%;
+    height: 100%;
+    background-color: #ED1C24;
+    color: white;
+    padding: 5px;
+    cursor: pointer;
+}
+.showed {
+    display: flex;
+}
+
+.hide{
+    display: none;
+}
+
 
 @media all  and (max-width: 1000px) {
     #burger {
         display: flex; 
         cursor: pointer;   
     }
-    #nav{
-        width: 70vw;
-        height: 100vh;
+    #nav{ 
         position: absolute;
+        width: 60%;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -399,14 +458,27 @@ footer > p {
         background-color: #1D1C28;
         top: 0;
         right: -100%;
-        z-index: 10000;
-        transition: 0.5s all;
+        z-index: 100001;
+        transition: 0.6s all;
     }
     #nav a {
         color: white;
     }
-    .show {
+    #nav-bg {
+        position: absolute;
+        width: 40%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, .25);
+        top: 0;
+        left: -100%;
+        z-index: 100001;
+        transition: 0.6s all;
+    }
+    #nav.show {
         right: 0;
+    }
+    #nav-bg.display {
+        left: 0;
     }
     .wave h1 {
         text-align: center;
@@ -436,5 +508,19 @@ footer > p {
     .menu {
         justify-content: center;
     }
-    
+    #cart-bx {
+        position: absolute;
+        display: none;
+        flex-direction: column;
+        justify-content: space-between;
+        align-self: center;
+        top: 100px;
+        background-color: #1D1C28;
+        text-align: center;
+        height: 70vh;
+        width: 100vw;
+        right: 0;
+        z-index: 10000000;
+    }
+
 }
